[gd_scene load_steps=10 format=3 uid="uid://vitlshr4vcut"]

[ext_resource type="Script" uid="uid://58vxlgwnq5bs" path="res://scenes/recording_indicator.gd" id="1_ln7s2"]
[ext_resource type="Texture2D" uid="uid://ddg27g0yosg1t" path="res://assets/graphics/progress_circle_both_under_100.png" id="2_w4vaq"]
[ext_resource type="Texture2D" uid="uid://da111ahe4eemo" path="res://assets/graphics/progress_circle_inner_progress_100.png" id="3_h1xr4"]
[ext_resource type="Texture2D" uid="uid://bstvq6umvmbbm" path="res://assets/graphics/progress_circle_outer_progress_100.png" id="4_khc6c"]

[sub_resource type="Animation" id="Animation_w4vaq"]
resource_name = "recording"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/RecordProgressBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.843137, 0.117647, 0, 1), Color(0.533795, 0.0581835, 9.62615e-08, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/SaveProgressBar:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.898039, 0.282353, 1)]
}

[sub_resource type="Animation" id="Animation_h1xr4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/RecordProgressBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.843137, 0.117647, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/SaveProgressBar:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.898039, 0.282353, 1)]
}

[sub_resource type="Animation" id="Animation_khc6c"]
resource_name = "saving"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/RecordProgressBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.843137, 0.117647, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/SaveProgressBar:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.898039, 0.282353, 1), Color(5.53504e-07, 0.616817, 0.182807, 1)]
}

[sub_resource type="Animation" id="Animation_786d0"]
resource_name = "finished"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/RecordProgressBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.843137, 0.117647, 0, 1), Color(0, 0.827451, 0.996078, 1), Color(0, 0.647059, 0.780392, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/SaveProgressBar:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0.898039, 0.282353, 1), Color(1.09738e-05, 0.828174, 0.995307, 1), Color(0, 0.646531, 0.780586, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jc66p"]
_data = {
&"RESET": SubResource("Animation_h1xr4"),
&"finished": SubResource("Animation_786d0"),
&"recording": SubResource("Animation_w4vaq"),
&"saving": SubResource("Animation_khc6c")
}

[node name="RecordingIndicator" type="Control" groups=["recording_indicators"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -969.0
offset_bottom = -502.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ln7s2")

[node name="Visuals" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RecordProgressBar" type="TextureProgressBar" parent="Visuals"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.5
offset_top = -15.0
offset_right = 89.5
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
step = 0.01
value = 60.0
fill_mode = 4
texture_under = ExtResource("2_w4vaq")
texture_progress = ExtResource("3_h1xr4")
tint_progress = Color(0.843137, 0.117647, 0, 1)

[node name="SaveProgressBar" type="TextureProgressBar" parent="Visuals"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.5
offset_top = -15.0
offset_right = 89.5
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
step = 0.01
value = 60.0
fill_mode = 4
texture_progress = ExtResource("4_khc6c")
tint_progress = Color(0, 0.898039, 0.282353, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Visuals"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = 88.0
offset_right = 297.5
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 6
bbcode_enabled = true
text = "[center]Recording...[/center]"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jc66p")
}
